MerzPharma/force-app/main/default/objects/Merz_IntegrationSettings__c/Merz_IntegrationSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings for storing data regarding subproces integrations.</description>
    <label>Integration Settings</label>
</CustomObject>