MerzPharma/force-app/main/default/objects/Merz_IntegrationSettings__c/fields/Merz_ClientId__c.field-meta.xml
<CustomField>
    <fullName>Merz_ClientId__c</fullName>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>