MerzPharma/force-app/main/default/objects/Merz_IntegrationSettings__c/fields/Merz_ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>Merz_ClientSecret__c</fullName>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>