MerzPharma/force-app/main/default/objects/Merz_IntegrationSettings__c/fields/Merz_Customer__c.field-meta.xml
<CustomField>
    <fullName>Merz_Customer__c</fullName>
    <label>Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>