MerzPharma/force-app/main/default/objects/Merz_IntegrationSettings__c/fields/Merz_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Merz_Endpoint__c</fullName>
    <description>API connection endpoint.</description>
    <inlineHelpText>Format like: https://developer.salesforce.com</inlineHelpText>
    <label>Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>